Fix main element's margin so diary's content is visible on all screens.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -8,7 +8,8 @@
     background-color: #000000;
     padding: 0;
     margin: 0;
-};
+    box-sizing: border-box;
+}
 body {
     min-height: 100vh;
     width: 100%;
@@ -19,7 +20,6 @@ header {
     z-index: 99;
     position: absolute;
     display: flex;
-    flex: 1 0 auto;
     flex-direction: column;
     align-content: center;
     flex-wrap: wrap;
@@ -52,7 +52,8 @@ h1 {
 /*Game*/
 main {
     width: 100%;
-    margin-top: 5rem;
+    flex: 1 0 auto;
+    margin-top: 12rem;
 }
 #game-container {
     max-width: 70%;
